--- a/public/fonts.css
+++ b/public/fonts.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: 'syneVar';
-  src: url("/fonts/syneVar.woff2") format("woff2");
+  src: url("https://discobabes.store/fonts/syneVar.woff2") format("woff2");
   font-weight: 400;
   font-display: swap;
 }
-
- 
