--- a/styles/modules/_product.css
+++ b/styles/modules/_product.css
@@ -78,11 +78,11 @@
   }
 
   &--values {
-    @apply flex flex-wrap justify-end ml-auto gap-x-8 gap-y-8;
+    @apply flex flex-wrap justify-end gap-x-8 gap-y-8;
     grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
   }
 
   &--swatch {
-    @apply clean-btn p-0 bg-transparent;
+    @apply clean-btn p-0 bg-transparent flex-row w-full gap-x-8;
   }
 }
